--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-/* General styles */
+
+/*General styles*/
 
 * {
     margin: 0;
@@ -9,6 +10,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
+    display: flex;
+    justify-content: space-around;
 
     --primary-text-color: #181820;
     --secondary-text-color: #5c5c62;
@@ -22,6 +25,10 @@ body {
     margin: 0 auto;
     padding: 0 30px;
     max-width: 900px;
+}
+
+.left-block {
+    margin-left: 20px;
 }
 
 .fh {
@@ -68,203 +75,229 @@ body {
     .experiences {
         margin-right: 0;
     }
-
-        /* Contact info styles */
-
-  .contact-info__header,
-  .contact-info__sub-header {
-      text-align: center;
-  }
-
-  .contact-info__header {
-      color: var(--primary-text-color);
-      margin-bottom: 15px;
-      text-decoration-color: var(--text-decoration-color);
-      text-decoration-line: underline;
-  }
-
-  .contact-info__sub-header {
-      color: var(--secondary-text-color);
-      margin-bottom: 30px;
-  }
-
-  .contact-info__block {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-  }
-
-  .contact-info__block--center {
-      justify-content: center;
-  }
-
-  .contact-info__item {
-      color: var(--secondary-text-color);
-      text-decoration: none;
-      display: flex;
-      justify-content: start;
-  }
-
-  .contact-info__item:not(:last-child) {
-      margin-bottom: 20px;
-  }
-
-  .contact-info__item-icon-wrapper {
-      margin-right: 10px;
-      width: 20px;
-      display: flex;
-      justify-content: center;
-  }
-
-  .contact-info__item-icon path {
-      fill: var(--icon-color);
-  }
-
-  .contact-info__item-icon {
-      height: 1.1428rem;
-      vertical-align: text-bottom;
-  }
-
-  .contact-info__avatar {
-      border-radius: 50%;
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border: 3px solid;
-      border-color: var(--text-decoration-color);
-  }
+}
 
 
+@media screen and (max-width: 1024px) {
+    body {
+        flex-direction: column;
+    }
+}
 
- /*  Intro and skills styles */
+.experiences {
+    margin-top: 50px;
+}
 
- .intro {
-     display: flex;
-     justify-content: start;
- }
+.hidden_feature {
+    transition: transform 0.3s ease;
+}
 
- .intro__icon-wrapper {
-     margin-right: 30px;
-     width: 30px;
-     display: flex;
-     justify-content: center;
- }
+.joke {
+    color: var(--secondary-text-color);
+    text-decoration: none;
+    display: inline;
+}
 
- .intro__icon {
-     height: 1.1428rem;
-     vertical-align: text-bottom;
- }
+.hidden_feature:hover {
+    transform: rotate(180deg);
+}
 
- .intro__icon path {
-     fill: var(--text-decoration-color);
- }
+/*Contact info styles*/
 
- .intro_text {
-     color: var(--secondary-text-color);
-     text-align: justify;
- }
+.contact-info__header,
+.contact-info__sub-header {
+    text-align: center;
+}
 
- .skills__header {
-     color: var(--secondary-text-color);
-     text-align: center;
-     margin-bottom: 15px;
- }
+.contact-info__header {
+    color: var(--primary-text-color);
+    margin-bottom: 15px;
+    text-decoration-color: var(--text-decoration-color);
+    text-decoration-line: underline;
+}
 
- .skills__text {
-     color: var(--secondary-text-color);
-     text-align: justify;
- }
+.contact-info__sub-header {
+    color: var(--secondary-text-color);
+    margin-bottom: 30px;
+}
 
+.contact-info__block {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
+.contact-info__block--center {
+    justify-content: center;
+}
 
-    /* Experience and additonal info styles */
+.contact-info__item {
+    color: var(--secondary-text-color);
+    text-decoration: none;
+    display: flex;
+    justify-content: start;
+}
 
-  .experiences {
-            flex: 1 1 60%;
-            margin-right: 50px;
-        }
-    
-        .experiences__header {
-            color: var(--secondary-text-color);
-            text-align: left;
-            margin-bottom: 20px;
-        }
-    
-        .experiences__company-header-durability {
-            color: var(--durability-text-color);
-            text-align: left;
-            margin-bottom: 10px;
-            font-size: 15px;
-        }
-    
-        .experiences__company-header-name {
-            color: var(--primary-text-color);
-            text-decoration-color: var(--text-decoration-color);
-            text-decoration-line: underline;
-            text-align: left;
-            margin-bottom: 20px;
-        }
-    
-        .experiences__company-project {
-            margin-left: 15px;
-            margin-bottom: 25px;
-        }
-    
-        .experiences__company-project-role {
-            color: var(--durability-text-color);
-            text-align: left;
-            margin-bottom: 10px;
-            font-size: 15px;
-        }
-    
-        .experiences__company-project-name {
-            color: var(--primary-text-color);
-            text-align: left;
-            margin-bottom: 10px;
-        }
-    
-        .experiences__company-project-responsibilities {
-            color: var(--secondary-text-color);
-            padding-left: 20px;
-        }
-    
-        .additional-info {
-            flex: 1 1 40%;
-        }
-    
-        .additional-info__education {
-            margin-bottom: 20px;
-        }
-    
-        .additional-info__education-header {
-            color: var(--secondary-text-color);
-            text-align: left;
-            margin-bottom: 20px;
-        }
-    
-        .additional-info__education-university-durability {
-            color: var(--durability-text-color);
-            text-align: left;
-            margin-bottom: 10px;
-            font-size: 15px;
-        }
-    
-        .additional-info__education-university-speciality {
-            color: var(--primary-text-color);
-            text-align: left;
-            margin-bottom: 10px;
-        }
-    
-        .additional-info__education-university-name {
-            color: var(--secondary-text-color);
-        }
-    
-        .additional-info__languages {
-            margin-bottom: 20px;
-        }
-    
-        .additional-info__languages-header {
-            color: var(--secondary-text-color);
-            text-align: left;
-            margin-bottom: 20px;
-        }
+.contact-info__item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.contact-info__item-icon-wrapper {
+    margin-right: 10px;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-info__item-icon path {
+    fill: var(--icon-color);
+}
+
+.contact-info__item-icon {
+    height: 1.1428rem;
+    vertical-align: text-bottom;
+}
+
+.contact-info__avatar {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid;
+    border-color: var(--text-decoration-color);
+}
+
+/*Intro and skills styles*/
+
+.intro {
+    display: flex;
+    justify-content: start;
+}
+
+.intro__icon-wrapper {
+    margin-right: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.intro__icon {
+    height: 1.1428rem;
+    vertical-align: text-bottom;
+}
+
+.intro__icon path {
+    fill: var(--text-decoration-color);
+}
+
+.intro_text {
+    color: var(--secondary-text-color);
+    text-align: justify;
+}
+
+.skills__header {
+    color: var(--secondary-text-color);
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.skills__text {
+    color: var(--secondary-text-color);
+    text-align: justify;
+}
+
+/*Experience and additonal info styles*/
+
+.experiences {
+    flex: 1 1 60%;
+    margin-right: 50px;
+}
+
+.experiences__header {
+    color: var(--secondary-text-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.experiences__company-header-durability {
+    color: var(--durability-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.experiences__company-header-name {
+    color: var(--primary-text-color);
+    text-decoration-color: var(--text-decoration-color);
+    text-decoration-line: underline;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.experiences__company-project {
+    margin-left: 15px;
+    margin-bottom: 25px;
+}
+
+.experiences__company-project-role {
+    color: var(--durability-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.experiences__company-project-name {
+    color: var(--primary-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.experiences__company-project-responsibilities {
+    color: var(--secondary-text-color);
+    padding-left: 20px;
+}
+
+.additional-info {
+    flex: 1 1 40%;
+}
+
+.additional-info__education {
+    margin-bottom: 20px;
+}
+
+.additional-info__education-header {
+    color: var(--secondary-text-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.additional-info__education-university-durability {
+    color: var(--durability-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.additional-info__education-university-speciality {
+    color: var(--primary-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.additional-info__education-university-name {
+    color: var(--secondary-text-color);
+}
+
+.additional-info__languages {
+    margin-bottom: 20px;
+}
+
+.additional-info__languages-header {
+    color: var(--secondary-text-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.additional-info__languages-item {
+    color: var(--secondary-text-color);
+}
