--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,18 @@ body {
 }
 
 .container {
-    margin: 0 auto;
+    margin: 10px;
     padding: 0 30px;
     max-width: 900px;
 }
 
 .left-block {
-    margin-left: 20px;
+    padding: 50px;
+    margin-top: 50px;
+    margin-left: 0px;
+    border: 1px solid #f5f5f5;
+    box-shadow: 3px 3px 7px 7px #ff990027;
+
 }
 
 .fh {
@@ -92,11 +97,7 @@ body {
     transition: transform 0.3s ease;
 }
 
-.joke {
-    color: var(--secondary-text-color);
-    text-decoration: none;
-    display: inline;
-}
+
 
 .hidden_feature:hover {
     transform: rotate(180deg);
@@ -131,7 +132,9 @@ body {
     justify-content: center;
 }
 
-.contact-info__item {
+.contact-info__item_FB,
+.contact-info__item_Inst, 
+.contact-info__item_geo {
     color: var(--secondary-text-color);
     text-decoration: none;
     display: flex;
@@ -216,7 +219,7 @@ body {
 }
 
 .experiences__header {
-    color: var(--secondary-text-color);
+    color: var(--text-decoration-color);
     text-align: left;
     margin-bottom: 20px;
 }
@@ -233,7 +236,7 @@ body {
     text-decoration-color: var(--text-decoration-color);
     text-decoration-line: underline;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .experiences__company-project {
@@ -244,14 +247,16 @@ body {
 .experiences__company-project-role {
     color: var(--durability-text-color);
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-size: 15px;
+    
 }
 
 .experiences__company-project-name {
     color: var(--primary-text-color);
     text-align: left;
     margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 .experiences__company-project-responsibilities {
@@ -268,9 +273,9 @@ body {
 }
 
 .additional-info__education-header {
-    color: var(--secondary-text-color);
+    color: var(--text-decoration-color);
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .additional-info__education-university-durability {
@@ -283,6 +288,7 @@ body {
 .additional-info__education-university-speciality {
     color: var(--primary-text-color);
     text-align: left;
+    margin-top: 15px;
     margin-bottom: 10px;
 }
 
@@ -295,7 +301,7 @@ body {
 }
 
 .additional-info__languages-header {
-    color: var(--secondary-text-color);
+    color: var(--text-decoration-color);
     text-align: left;
     margin-bottom: 20px;
 }
